# ppm-server

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.zed/: tasks.json
src/: main.rs
src/api/: auth.rs  mod.rs
src/auth/: mod.rs  services.rs
src/chat/: mod.rs
src/database/: create.rs  mod.rs  sqlite.rs
src/db/: mod.rs
src/helpers/: jwt.rs  mod.rs
src/models/: mod.rs
src/utils/: mod.rs  server.rs  token.rs
