[package]
name = "ppm-server"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures-util = "0.3.30"
jwt-compact = "0.8.0"
rustls = "0.23.12"
rustls-pemfile = "2.1.2"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = {version = "1.38.1", features = ["full"]}
tokio-rustls = "0.26.0"
tokio-tungstenite = "0.23.1"
