[package]
name = "ppm-server"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-csrf = "0.7.0"
actix-web ={ version = "4.9.0", features = ["rustls-0_23"] }
anyhow = "1.0.86"
base64 = "^0.13"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
futures-util = "0.3.30"
jwt-compact = "0.8.0"
local-ip-address = "0.6.1"
ppm-models ={ path = "./models" }
rand = "0.8.5"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-tungstenite = "0.23.1"
