[package]
name = "ppm-server"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
anyhow = "1.0.89"
blake3 = "1.5.4"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
constcat = "0.5.0"
futures-util = "0.3.30"
jwt-compact = "0.8.0"
local-ip-address = "0.6.3"
ppm-models = { git = "https://github.com/cloudgazing/ppm-models.git", version = "0.6.4" }
rand = "0.8.5"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-tungstenite = "0.23.1"
uuid = { version = "1.10.0", features = ["v4"] }
